--- a/fileinformationsdialog.ui
+++ b/fileinformationsdialog.ui
@@ -58,6 +58,9 @@
        </item>
        <item>
         <widget class="QLabel" name="file_info_path">
+         <property name="toolTip">
+          <string>Chemin vers le fichier</string>
+         </property>
          <property name="text">
           <string>-</string>
          </property>
@@ -94,6 +97,9 @@
        </item>
        <item>
         <widget class="QLabel" name="file_info_size">
+         <property name="toolTip">
+          <string>Taille du fichier</string>
+         </property>
          <property name="text">
           <string>-</string>
          </property>
@@ -130,6 +136,9 @@
        </item>
        <item>
         <widget class="QLabel" name="file_info_codec">
+         <property name="toolTip">
+          <string>Codec audio</string>
+         </property>
          <property name="text">
           <string>-</string>
          </property>
@@ -166,6 +175,9 @@
        </item>
        <item>
         <widget class="QLabel" name="file_info_bitrate">
+         <property name="toolTip">
+          <string>Qualité audio</string>
+         </property>
          <property name="text">
           <string>-</string>
          </property>
@@ -202,6 +214,9 @@
        </item>
        <item>
         <widget class="QLabel" name="file_info_sample_rate">
+         <property name="toolTip">
+          <string>Fréquence d'échantillonage</string>
+         </property>
          <property name="text">
           <string>-</string>
          </property>
@@ -238,6 +253,9 @@
        </item>
        <item>
         <widget class="QLabel" name="file_info_nb_channels">
+         <property name="toolTip">
+          <string>Nombre de canaux audio</string>
+         </property>
          <property name="text">
           <string>-</string>
          </property>
@@ -248,6 +266,19 @@
        </item>
       </layout>
      </item>
+     <item>
+      <widget class="QPushButton" name="action_close">
+       <property name="toolTip">
+        <string>Fermer</string>
+       </property>
+       <property name="text">
+        <string>Fermer</string>
+       </property>
+       <property name="shortcut">
+        <string>Esc, Return</string>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
   </layout>
@@ -255,5 +286,22 @@
  <resources>
   <include location="icons/icons.qrc"/>
  </resources>
- <connections/>
+ <connections>
+  <connection>
+   <sender>action_close</sender>
+   <signal>clicked()</signal>
+   <receiver>FileInformationsDialog</receiver>
+   <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>194</x>
+     <y>233</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>194</x>
+     <y>129</y>
+    </hint>
+   </hints>
+  </connection>
+ </connections>
 </ui>
