--- a/metaexplorer.ui
+++ b/metaexplorer.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>418</width>
-    <height>498</height>
+    <width>420</width>
+    <height>500</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>420</width>
+    <height>500</height>
+   </size>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
