--- a/libraryexplorer.ui
+++ b/libraryexplorer.ui
@@ -108,8 +108,14 @@
        <property name="acceptDrops">
         <bool>true</bool>
        </property>
+       <property name="editTriggers">
+        <set>QAbstractItemView::NoEditTriggers</set>
+       </property>
        <property name="dragDropMode">
         <enum>QAbstractItemView::DropOnly</enum>
+       </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::MultiSelection</enum>
        </property>
       </widget>
      </item>
