Fix treeview selection bug

--- a/libraryexplorer.ui
+++ b/libraryexplorer.ui
@@ -115,7 +115,7 @@
         <enum>QAbstractItemView::DropOnly</enum>
        </property>
        <property name="selectionMode">
-        <enum>QAbstractItemView::MultiSelection</enum>
+        <enum>QAbstractItemView::ExtendedSelection</enum>
        </property>
       </widget>
      </item>
