--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -160,8 +160,11 @@
   </widget>
   <widget class="QStatusBar" name="main_status"/>
   <widget class="QDockWidget" name="main_dock">
+   <property name="floating">
+    <bool>false</bool>
+   </property>
    <property name="features">
-    <set>QDockWidget::DockWidgetFloatable</set>
+    <set>QDockWidget::DockWidgetFloatable|QDockWidget::DockWidgetMovable</set>
    </property>
    <property name="allowedAreas">
     <set>Qt::LeftDockWidgetArea|Qt::RightDockWidgetArea</set>
